<?xml version="1.0" encoding="utf-8"?>
<!--/**
 * Proyecto final Moviles Uniquindio
 *
 * @author Daniel Alvarado Arias
 * @author Leydi Giraldo Franco
 * @author Juan Diego Buitrago
 * 28 de Abril de 2016
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/noticias"
            android:title="@string/noticias" />
        <item
            android:id="@+id/telefonos"
            android:title="@string/telefonos" />
        <item
            android:id="@+id/sugerencias"
            android:title="@string/sugerencias" />

        <item
            android:id="@+id/pagina"
            android:title="@string/URL" />
        <item
            android:id="@+id/idioma"
            android:title="@string/es_us"
            android:icon="@drawable/es_us"/>

    </group>

</menu>